Fixed ripple effect on mobile

--- a/src/material-design/components/md-backdrop/md-backdrop.component.scss
+++ b/src/material-design/components/md-backdrop/md-backdrop.component.scss
@@ -12,7 +12,7 @@ $app-bar-menu-button-spacing: 24px;
   @apply .bg-primary;
 
   .back-layer {
-    @apply .text-white;
+    @apply .text-light;
     padding: 0 $backdrop-padding;
 
     .app-bar {
